# dFBA-Batch-Culture-Simulation

./: README.md  main.py  pyproject.toml
docs/: Proyek Respirasi Sel & ATP_ Judul & Rencana.txt
notebooks/: dfba_simulation.ipynb
src/: config.py  dfba_system.py  dynamic_bounds.py  model_loader.py  solver.py  visualization.py
